# rusty-kyber

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  diagnostics_report.txt  file-tree.md  file.md  nist.fips.203.md  test-commands.md  to-do.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
archive/: README.md  ntt_legacy.rs  poly_legacy.rs  utils_legacy.rs
benches/: kem.rs  ntt.rs  poly.rs
examples/: no_std.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: kem_roundtrip.rs  pack_unpack.rs
src/: api.rs  decaps.rs  encaps.rs  hardening.rs  kem.rs  keygen.rs  lib.rs  math.rs  ntt.rs  params.rs  poly.rs  utils.rs
temp/: mistakes.md
tests/: api_std.rs  arm64_smoke.rs  cbd.rs  ctr_drbg.rs  hardening.rs  hardening_ok.rs  kat.rs  kem_fail.rs  ntt_mul.rs  ntt_poly.rs  pack.rs  params_consistency.rs  serde.rs  utils_hash.rs  utils_msg.rs  xof_matrix.rs
tests/kat_vectors/: kyber1024.rsp  kyber512.rsp  kyber768.rsp
