[package]
name = "rusty-kyber"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Pure-Rust Kyber (ML-KEM) implementation"
documentation = "https://docs.rs/rusty-kyber"
categories = ["cryptography", "no-std"]
keywords = ["kyber", "ml-kem", "post-quantum", "pqc", "cryptography"]
exclude = [".github/**", "fuzz/**"]

[features]
default = ["std", "kyber512"]
std = ["dep:rand"]
serde = ["dep:serde"]
zeroize = ["dep:zeroize"]
hardening = ["zeroize"]
kyber512 = []
kyber768 = []
kyber1024 = []

[dependencies]
sha3 = { version = "0.10", default-features = false }
rand_core = "0.6"
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
zeroize = { version = "1.6", optional = true }
subtle = "2.5"

[dev-dependencies]
hex = "0.4"
aes = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
rand_chacha = "0.3"
rand = "0.8"
serde_json = "1.0"

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "kem"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
